data/derived/comb/progs/unify/prog5544.ml.out
Characters 57-59:
  n mod 10 append digitsOfInt (n/10);;
        ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
